# intelligent-customer-service

./: .gitignore  README.md  docker-compose.agents.yml  docker-compose.infra.yml  docker-compose.services.yml  docker-compose.yml  pyproject.toml
backend/: .env  Dockerfile  docker-compose.redis.yml  pyproject.toml  redis.conf  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  langgraph_agent.py  memory.py  prompts.py  react_agent.py  state.py  store.py
backend/app/api/: routes.py
backend/app/api/endpoints/: __init__.py  agent.py  chat.py  config.py  knowledge.py  mcp.py  system.py
backend/app/api/schemas/: __init__.py  agent.py  chat.py  config.py  knowledge.py  system.py
backend/app/core/: cache.py  hybrid_store_manager.py  llm_manager.py  vector_store.py
backend/app/domain/: __init__.py
backend/app/domain/base/: __init__.py  entities.py  interfaces.py  lifecycle.py
backend/app/infrastructure/factory/: __init__.py  service_factory.py  service_registry.py
backend/app/mcp/: __init__.py  registry.py
backend/app/mcp/tools/: __init__.py  base.py  code_executor.py  knowledge.py  web_search.py
backend/app/rag/: __init__.py  hybrid_es_retriever.py  hybrid_retriever.py  index_manager.py  postprocessor.py  query_engine.py  query_transform.py  reranker.py
backend/app/services/: knowledge_base_service.py  langfuse_service.py  rag_service.py
backend/app/utils/: log_utils.py
backend/config/: settings.py
backend/data/knowledge_base/: EMP 20251101.docx  sample_faq.txt
backend/tests/: test_agent_flow.py  test_api_endpoints.py  test_ddd_architecture.py  test_embedding_optimization.py  test_langfuse_integration.py  test_logging.py  test_rag_flow.py  test_redis_cache.py
data/memory_store/: 3a799738-e7ad-4b19-b401-3fa56e39c391.json  3f6380c5-2ae7-4a7a-9d08-f523594753fe.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: dev.sh  start.sh
services/: run_service.sh
services/agents_service/: .env.agents  Dockerfile.base  __init__.py  requirements.txt  run_agent.py  start_all.sh
services/agents_service/billing_advisor/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/billing_advisor/tools/: __init__.py  billing_query.py
services/agents_service/charging_manager/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/charging_manager/tools/: __init__.py  charging_status.py
services/agents_service/data_analyst/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/data_analyst/tools/: __init__.py  energy_analytics.py
services/agents_service/energy_advisor/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/energy_advisor/tools/: __init__.py  cost_optimization.py
services/agents_service/maintenance_expert/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/maintenance_expert/tools/: __init__.py  device_health.py
services/agents_service/travel_assistant/: Dockerfile  __init__.py  __main__.py  executor.py  pyproject.toml
services/agents_service/travel_assistant/tools/: __init__.py  station_search.py
services/api_gateway/: .env  .env.example  (+6 more)
(+193 files in other folders)
