[project]
name = "intelligent-customer-service"
version = "0.1.0"
description = "Intelligent Customer Service System with LangGraph Agent"
requires-python = ">=3.10"

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", ".git"]
venvPath = "."
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

[tool.pylint.master]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
