[project]
name = "billing-advisor-agent"
version = "1.0.0"
description = "Billing Advisor Agent - Billing Query and Explanation"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=0.3.0",
    "uvicorn>=0.24.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
